# robot_programming

yolo/: LICENSE
yolo/src/ros_ocr/: CMakeLists.txt  package.xml  setup.cfg  setup.py
yolo/src/ros_ocr/ros_ocr/: image_publisher.py  ocr_classify_node.py
yolo/src/yolov5_ros/: package.xml  setup.py
yolo/src/yolov5_ros/yolov5_ros/: yolov5_node.py  yolov5_subsciriber.py
