<package format="3">
  <name>ros_ocr</name>
  <version>0.0.0</version>
  <description>ROS2 node for OCR and classification using EasyOCR</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>opencv-python-headless</exec_depend>
  <exec_depend>easyocr</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>

